fix: valid logic